# Belhard_py2_17_Dmitry_Shulga

./: README.md  pyproject.toml
HW_1/: Server.py
HW_10/: database.py  main1.py  main2.py  routers.py  schema.py
HW_10/db/: HW_10.db
HW_11/HW_11/: asgi.py  settings.py  urls.py  wsgi.py
HW_11/app1/: admin.py  apps.py  models.py  urls.py  views.py
HW_11/app1/migrations/: 0001_initial.py  0002_student_photo_student_slug_course_student_course_and_more.py
HW_11/templates/: base.html  index.html  student.html  students.html
HW_11/templates/registration/: logged_out.html  login.html  register.html
HW_11/users/: urls.py  views.py
HW_2/: 1.html  Client.py  main.py  sync_asinc_weather.py  users.json
HW_2, HW_3/: main.py  sync_asinc_weather.py
HW_2, HW_3/templates/: duck.html  fox.html  index.html  login.html  registration.html  weather_city.html  weather_minsk.html
HW_2...HW_4/: main.py  sync_asinc_weather.py
HW_2...HW_4/static/css/: duck.css  (+8 more)
HW_2...HW_4/templates/: fox.html
HW_2...HW_5/: users.json
HW_2...HW_5/templates/: duck.html  hw_4.html  index.html  login.html  registration.html  weather_city.html  weather_minsk.html
HW_2/templates/: duck.html  fox.html  index.html  weather_city.html  weather_minsk.html
HW_3...HW_6/templates/: base.html  duck.html  fox.html  hw_4.html  index.html  login.html  registration.html  weather_city.html  weather_minsk.html
HW_8/: init_db.py  main.py  models.py
HW_8/db/: db_quiz.db
HW_8/templates/: base.html  editor.html  index.html  question.html  question_editor.html  quiz_editor.html  result.html  start.html
(+27 files in other folders)
