[project]
name = "belhard-py2-17-dmitry-shulga"
version = "0.1.0"
description = ""
authors = [
    {name = "Dmitry Shulga",email = "Shulga.dmitry.16.1992@yandex.by"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
